Ejercicio 8 Mostrar resultados